Fix overlapping icons on scroll bug

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -15,6 +15,7 @@ html {
   height: 3.5rem;
   position: fixed;
   top: 0;
+  z-index: 2;
 
   .project-name {
     font-size: 1.4rem;
